[tool.poetry]
name = "alceo"
version = "0.1.0"
description = ""
authors = ["Gregory Sech <gregory.sech@iit.it>"]

[tool.poetry.dependencies]
python = "^3.8"
rasterio = "^1.3.2"
Fiona = "^1.8.21"
matplotlib = "^3.6.1"
torch = "^1.13.0"
torchvision = "^0.14.0"
pytorch-lightning = {extras = ["extra"], version = "^1.9.0"}
segmentation-models-pytorch = "^0.3.2"
sorcery = "^0.2.2"
tensorboard = "^2.11.0"
torch-tb-profiler = "^0.4.1"
geopandas = "^0.12.2"
rtree = "^1.0.1"
folium = "^0.14.0"
mapclassify = "^2.5.0"
ipyleaflet = "^0.17.2"
shapely = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
black = "^22.10.0"

[tool.poetry.group.dev.dependencies]
gdown = "^4.6.0"
black = {version = "^22.12.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
