[tool.poetry]
name = "alceo"
version = "0.1.0"
description = "Python module developed for the ALCEO project."
authors = ["Gregory Sech <gregory.sech@iit.it>"]
packages = [
    { include = "alceo", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
dvc = "^2.56"
dvclive = {extras = ["lightning"], version = "^2.6.2"}
dvc-ssh = "^2.22.1"
Fiona = "^1.8.21"
folium = "^0.14.0"
geopandas = "^0.12.2"
ipyleaflet = "^0.17.2"
lightning = "^2.0.1"
mapclassify = "^2.5.0"
matplotlib = "^3.6.1"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-gen-files = "^0.4.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
rasterio = "^1.3.2"
rtree = "^1.0.1"
segmentation-models-pytorch = "^0.3.2"
shapely = "^2.0.1"
sorcery = "^0.2.2"
tensorboard = "^2.11.0"
torch = "^1.13.0"
torchvision = "^0.14.0"
torch-tb-profiler = "^0.4.1"
torchmetrics = "^0.11.4"
jsonargparse = {extras = ["signatures"], version = "^4.21.1"}
mkdocs-material = "^9.1.15"

[tool.poetry.group.dev.dependencies]
gdown = "^4.6.0"
pytest = "^5.2"
jupyter = "^1.0.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"